--- a/Wavenet.Umbraco7.SlotCopy.csproj
+++ b/Wavenet.Umbraco7.SlotCopy.csproj
@@ -11,6 +11,7 @@
     <PackageIconUrl>https://www.wavenet.be/favicon.ico</PackageIconUrl>
     <RepositoryUrl>https://github.com/wavenet-be/Wavenet.Umbraco7.SlotCopy/</RepositoryUrl>
     <PackageTags>Umbraco7 Azure Slot</PackageTags>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -31,7 +32,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="UmbracoCms.Core" Version="7.10.0" />
+    <PackageReference Include="UmbracoCms.Core" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
