--- a/Wavenet.Umbraco7.SlotCopy.csproj
+++ b/Wavenet.Umbraco7.SlotCopy.csproj
@@ -11,10 +11,10 @@
     <PackageIconUrl>https://www.wavenet.be/favicon.ico</PackageIconUrl>
     <RepositoryUrl>https://github.com/wavenet-be/Wavenet.Umbraco7.SlotCopy/</RepositoryUrl>
     <PackageTags>Umbraco7 Azure Slot</PackageTags>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup>
     <DocumentationFile>Wavenet.Umbraco7.SlotCopy.xml</DocumentationFile>
   </PropertyGroup>
 
@@ -32,7 +32,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="UmbracoCms.Core" Version="7.2.0" />
+    <PackageReference Include="UmbracoCms.Core" Version="[7.2.0,8)" />
   </ItemGroup>
 
   <ItemGroup>
