--- a/Wavenet.Umbraco7.SlotCopy/Wavenet.Umbraco7.SlotCopy.csproj
+++ b/Wavenet.Umbraco7.SlotCopy/Wavenet.Umbraco7.SlotCopy.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net45</TargetFramework>
@@ -19,12 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="stylecop.json" />
     <None Remove="Wavenet.Umbraco7.SlotCopy.xml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,9 +31,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="System.Configuration">
-      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6\System.Configuration.dll</HintPath>
-    </Reference>
+    <Compile Include="..\Controllers\SlotCopyController.cs" Link="Controllers\SlotCopyController.cs" />
+    <Compile Include="..\Helpers\Base64UrlEncoder.cs" Link="Helpers\Base64UrlEncoder.cs" />
+    <Compile Include="..\Helpers\DateHelper.cs" Link="Helpers\DateHelper.cs" />
+    <Compile Include="..\Helpers\JwtHelper.cs" Link="Helpers\JwtHelper.cs" />
+    <Compile Include="..\Models\FileInfoViewModel.cs" Link="Models\FileInfoViewModel.cs" />
+    <Compile Include="..\Settings.cs" Link="Settings.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Web">
       <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6\System.Web.dll</HintPath>
     </Reference>
